# imu_lsm6dstrc_ros

./: CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: tilt_visualizer.launch.py
scripts/: imu_printer.py  imu_publisher.py  imu_settings_test.py  tilt_visualizer.py
